--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,16 @@
 @import './base.css';
 @import 'tailwindcss';
 
-#app {
+.show .work-card {
+  transform: translateX(-2rem);
+}
+
+.show .work-panel {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+/* #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -33,4 +42,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
